# rules_gitlab

./: CHANGELOG.md  MODULE.bazel  README.md
docs/: BUILD.bazel  defs.md
examples/generate/: BUILD.bazel
examples/generate/golden/: .gitlab-ci.yml
gitlab/: BUILD.bazel  defs.bzl
gitlab/private/: BUILD.bazel  emit_main.py  validate_main.py
tooling/: pyproject.toml
