# Bazel rules for GitLab CI configuration files.
#
# Today: validation against GitLab's official JSON Schema +
# server-side lint via `glab ci lint`. Future surface: deploy
# wrappers, registry/package API helpers, schema-derived typed
# rules for authoring `.gitlab-ci.yml` from Starlark.
module(
    name = "rules_gitlab",
    version = "0.3.4",
)

bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "bazel_skylib", version = "1.8.2")
bazel_dep(name = "rules_python", version = "1.7.0")
bazel_dep(name = "rules_shell", version = "0.6.1")

# write_source_files — the `gitlab_ci` generator's `<name>.update`
# write-back + bazel-test up-to-date gate. 2.22.5 matches the
# ecosystem pin (rules_vscode, rules_lang, fastverk).
bazel_dep(name = "aspect_bazel_lib", version = "2.22.5")

# rules_uv ships the Python validator dep (check-jsonschema) via
# its `pip.parse` extension. Consumers of rules_gitlab don't need
# their own uv setup — the tooling hub here is internal. 0.7.4's pip
# extension searches python3.13/3.12/3.11 (its uvlock_to_json needs
# tomllib ≥3.11; 0.7.3 ran bare python3 = macOS system 3.9).
bazel_dep(name = "rules_uv", version = "0.7.4")

# Register a hermetic Python 3.12 for the validator binary. NOT a dev_dependency:
# the validate tool (gitlab/private/validate, python_version=3.12) runs in EVERY
# consumer, so the 3.12 toolchain must propagate to consumers — a dev_dependency
# extension only activates when rules_gitlab is the ROOT module, so as a transitive
# dep the pin fell back to the consumer's default python (3.11 in CI) and
# check-jsonschema's cp312 rpds-py ext failed (ModuleNotFoundError: rpds.rpds).
# is_default=False so we register 3.12 as AVAILABLE for the pin without overriding
# the consumer's own default interpreter.
python = use_extension(
    "@rules_python//python/extensions:python.bzl",
    "python",
)
python.toolchain(python_version = "3.12", is_default = False)

uv = use_extension("@rules_uv//uv:extensions.bzl", "uv")
use_repo(uv, "uv", "uv_source")
register_toolchains("@rules_uv//uv:uv_toolchain_def")

# The tooling lock (//tooling:uv.lock) pins its wheels from PUBLIC pypi
# (files.pythonhosted.org) by content hash — portable, needs no auth for
# any consumer. A consumer whose CI must use a different pypi (a private
# mirror/proxy or air-gapped index) rewrites the download URLs GLOBALLY via
# bazel's `--experimental_downloader_config` (+ a `.netrc` for auth) in its
# system bazelrc; the pinned hashes still match, so it's transparent. No
# private/savvi registry is baked into this shared rule.
pip = use_extension("@rules_uv//pip:extensions.bzl", "pip")
pip.parse(
    hub_name = "rules_gitlab_tooling",
    lock = "//tooling:uv.lock",
)
use_repo(pip, "rules_gitlab_tooling")

# Pin the official GitLab CI JSON Schema (the same file GitLab's
# web editor uses) for use by the `gitlab_ci_validate` rule.
gitlab_schemas = use_extension("//gitlab:extensions.bzl", "gitlab_schemas")
use_repo(gitlab_schemas, "gitlab_ci_schema")

# Default `glab` toolchain — PATH-based sh wrapper. Consumers
# wanting hermeticity can register their own (multitool,
# http_file) without touching the user-facing rules.
register_toolchains("//gitlab/glab:default_glab_toolchain")

bazel_dep(name = "stardoc", version = "0.7.2", dev_dependency = True)
