# rules_gitlab internal tooling deps. Pulled into the
# `@rules_gitlab_tooling` pip hub.
[project]
name = "rules-gitlab-tooling"
version = "0.0.0"
requires-python = ">=3.11,<3.14"
dependencies = [
    "check-jsonschema>=0.33,<1.0",
    # The validator wrapper parses YAML with ruamel.yaml directly
    # so it can register a generic constructor for GitLab's custom
    # CI tags (`!reference`, `!file`, …) — check-jsonschema's
    # built-in YAML loader rejects them. ruamel.yaml is already a
    # transitive dep of check-jsonschema; we pin it explicitly so
    # rules_python materializes it for our py_binary.
    "ruamel.yaml>=0.17,<1.0",
]
