load("@bazel_skylib//rules:diff_test.bzl", "diff_test")
load("//gitlab:defs.bzl", "gitlab_ci", "gitlab_job", "gitlab_reference")

package(default_visibility = ["//visibility:public"])

# Smoke: assemble a small pipeline from typed Starlark, emit it as YAML,
# schema-validate the result, and gate the bytes against a committed
# golden. `bazel run //examples/generate:pipeline.update` regenerates the
# golden; `bazel test //examples/generate:...` checks it's current + valid.
gitlab_ci(
    name = "pipeline",
    stages = ["build", "test"],
    variables = {"GREETING": "hello"},
    jobs = {
        # Hidden template job + a `!reference` to it (round-trip test).
        ".setup": gitlab_job(
            before_script = ["echo setting up"],
        ),
        "build": gitlab_job(
            stage = "build",
            before_script = gitlab_reference(".setup", "before_script"),
            script = ['echo "$GREETING from build"'],
        ),
        "test": gitlab_job(
            stage = "test",
            script = ['echo "$GREETING from test"'],
            coverage = "/^TOTAL\\s+\\d+/",
        ),
    },
    write_to = "golden/.gitlab-ci.yml",
)

diff_test(
    name = "pipeline_golden_test",
    file1 = ":pipeline",
    file2 = "golden/.gitlab-ci.yml",
)
