load("@rules_gitlab_tooling//:requirements.bzl", "requirement")
load("@rules_python//python:defs.bzl", "py_binary")

package(default_visibility = ["//gitlab:__subpackages__"])

# Wrapper around `check-jsonschema` invoked by the
# `gitlab_ci_validate` rule. Brought in via the
# `@rules_gitlab_tooling` pip hub so consumers don't need their
# own tooling lockfile.
py_binary(
    name = "validate",
    srcs = ["validate_main.py"],
    main = "validate_main.py",
    # PIN the interpreter to 3.12 — the version this tool's pip lock (//tooling:uv.lock)
    # resolves its wheels for, incl. check-jsonschema's native-ext transitive dep rpds-py
    # (rpds.cpython-312-darwin.so). Without this the tool runs under the CONSUMER's default
    # python (3.11 — a dependency's is_default is ignored), and a 3.11 interpreter silently
    # skips the cp312 .so → `ModuleNotFoundError: No module named 'rpds.rpds'`. Pinning makes
    # validate work in any consumer regardless of their default python.
    python_version = "3.12",
    deps = [
        requirement("check-jsonschema"),
        # Direct dep on ruamel.yaml so the wrapper can register a
        # constructor that absorbs GitLab's `!reference` / `!file`
        # custom CI tags before check-jsonschema parses (its own
        # YAML loader rejects them).
        requirement("ruamel.yaml"),
    ],
    visibility = ["//visibility:public"],
)

# YAML emitter invoked by the `gitlab_ci` generation rule. Takes the
# canonical JSON spec (assembled in Starlark) and ruamel.yaml-dumps a
# deterministic `.gitlab-ci.yml`, reviving `!reference` tags from
# sentinels (symmetric to validate's tolerant loader).
py_binary(
    name = "emit",
    srcs = ["emit_main.py"],
    main = "emit_main.py",
    # Same 3.12 pin as validate — match the tooling pip lock + keep both tools on one
    # interpreter regardless of the consumer's default python.
    python_version = "3.12",
    deps = [
        requirement("ruamel.yaml"),
    ],
    visibility = ["//visibility:public"],
)
